--- a/pmfront/templates/base.html
+++ b/pmfront/templates/base.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet"/>
     <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet"/>
-
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet"/>
     {% block extrahead %}
     {% endblock %}
 </head>
@@ -23,10 +23,10 @@
 				<li>
 					<a href="#">绿色排行榜</a>
 				</li>
-				<li class="disabled">
+				<li>
 					<a href="#">赞助我们</a>
 				</li>
-                <li class="disabled">
+                <li>
                     <a href="#">关于我们</a>
                 </li>
 
