--- a/pmfront/templates/index.html
+++ b/pmfront/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block extrahead %}
     <script type="text/javascript">
 
         $(function () {
-            alert('test');
         });
     </script>
 {% endblock %}
@@ -20,44 +20,41 @@
         </ol>
         <div class="carousel-inner">
             <div class="item active">
-                <img alt="" src="http://lorempixel.com/1600/500/sports/1"/>
+                <img alt="" src="{% static 'img/banner1.jpg' %}"/>
 
                 <div class="carousel-caption">
-                    <h4>
-                        First Thumbnail label
-                    </h4>
+                    <h3>
+                        PM2.5
+                    </h3>
 
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        这些数据关系到你我的生命！
                     </p>
                 </div>
             </div>
             <div class="item">
-                <img alt="" src="http://lorempixel.com/1600/500/sports/2"/>
+                <img alt="" src="{% static 'img/banner2.jpg' %}"/>
 
                 <div class="carousel-caption">
-                    <h4>
-                        Second Thumbnail label
-                    </h4>
+                    <h3>
+                        多一点绿色
+                    </h3>
 
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        我们要的不只是关注，而是实实在在的行动！
                     </p>
                 </div>
             </div>
             <div class="item">
-                <img alt="" src="http://lorempixel.com/1600/500/sports/3"/>
+                <img alt="" src="{% static 'img/banner3.jpg' %}"/>
 
                 <div class="carousel-caption">
-                    <h4>
-                        Third Thumbnail label
-                    </h4>
+                    <h3>
+                        穹顶之下
+                    </h3>
 
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        我们同呼吸自然共命运！
                     </p>
                 </div>
             </div>
@@ -70,6 +67,7 @@
 {% endblock %}
 
 {% block maincontent %}
+    <h3>热门城市</h3>
     <table class="table table-bordered table-hover table-condensed">
 
         <tbody>
@@ -84,65 +82,24 @@
                 广州
             </td>
             <td>
-                城市1
+                武汉
             </td>
         </tr>
-        <tr>
-            <td>
-                城市2
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-        </tr>
-        <tr>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                Declined
-            </td>
-        </tr>
-        <tr>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-        </tr>
-        <tr>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-            <td>
-                城市
-            </td>
-        </tr>
+        </tbody>
+    </table>
+
+    <h3>全部城市</h3>
+    <table class="table table-bordered table-hover table-condensed">
+
+        <tbody>
+        {% for city in citys %}
+            {% if forloop.counter|divisibleby:5 %}
+                </tr><tr>
+                <td><a href="/detail/{{ city.id }}">{{ city.name }}</a></td>
+            {% else %}
+                <td><a href="/detail/{{ city.id }}">{{ city.name }}</a></td>
+            {% endif %}
+        {% endfor %}
         </tbody>
     </table>
 {% endblock %}
