--- a/pmfront/templates/base.html
+++ b/pmfront/templates/base.html
@@ -18,7 +18,7 @@
 		<div class="col-md-12 column">
 			<ul class="nav nav-tabs">
 				<li class="active">
-					<a href="#">首页</a>
+					<a href="/">首页</a>
 				</li>
 				<li>
 					<a href="#">绿色排行榜</a>
