--- a/pmfront/templates/detail.html
+++ b/pmfront/templates/detail.html
@@ -5,11 +5,13 @@
 {% endblock %}
 {% block maincontent %}
     <table class="table table-bordered table-hover table-condensed">
-    <tr>
+    {% if places %}
+        <tr>
         <td>观测点</td><td>AQI</td><td>空气质量指数类别</td><td>首要污染物</td><td>PM2.5细颗粒物</td>
         <td>PM10可吸入颗粒物</td><td>CO一氧化碳</td><td>NO2二氧化氮</td><td>O3臭氧一小时平均</td>
         <td>O3臭氧八小时平均</td><td>SO2二氧化硫</td>
     </tr>
+    {% endif %}
     {% for place in places|ks %}
         <tr>
             <td>{{ place.place }}</td>
@@ -19,6 +21,8 @@
                 <td>{{ pd.NO2 }}</td><td>{{ pd.O31 }}</td><td>{{ pd.O38 }}</td><td>{{ pd.SO2 }}</td>
             {% endwith %}
         </tr>
+    {% empty %}
+        <tr><td colspan="11"><h3>今日暂无时时观测数据，<a href="{% url 'fresh' %}">点击此处</a>刷新!</h3></td></tr>
     {% endfor %}
     </table>
 {% endblock %}
