添加about,sponser静态页面

--- a/pmfront/templates/base.html
+++ b/pmfront/templates/base.html
@@ -24,10 +24,10 @@
 					<a href="#">绿色排行榜</a>
 				</li>
 				<li>
-					<a href="#">赞助我们</a>
+					<a href="{% url 'sponser' %}">赞助我们</a>
 				</li>
                 <li>
-                    <a href="#">关于我们</a>
+                    <a href="{% url 'about' %}">关于我们</a>
                 </li>
 
 			</ul>
